[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Entities/Shops/UpgradeShop/Upgrades/BaseUpgrade.gd" type="Script" id=2]
[ext_resource path="res://fontDump/textFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menus/UITheme.tres" type="Theme" id=4]

[node name="BaseUpgrade" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 99.0
theme = ExtResource( 4 )
custom_constants/separation = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_right = 64.0
margin_bottom = 126.0
texture = ExtResource( 1 )

[node name="Text" type="VBoxContainer" parent="."]
margin_left = 84.0
margin_right = 862.0
margin_bottom = 126.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Description" type="Label" parent="Text" groups=[
"translate",
]]
margin_right = 778.0
margin_bottom = 69.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 3 )
text = "Placeholder description for and upgrade thingy lorem ipsum lorem ipsum lorem ipsumPlaceholder descri"
autowrap = true

[node name="UpgradeValue" type="Label" parent="Text" groups=[
"translate",
]]
margin_top = 89.0
margin_right = 778.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 3 )
text = "Adds gorilion hp to your engine"

[node name="ButtonInfo" type="Button" parent="." groups=[
"translate",
]]
visible = false
margin_left = 764.0
margin_right = 864.0
margin_bottom = 126.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Info"

[node name="ButtonBuy" type="Button" parent="."]
margin_left = 882.0
margin_right = 1024.0
margin_bottom = 126.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = ExtResource( 3 )
text = "upgradeshop.buy"
[connection signal="pressed" from="ButtonInfo" to="." method="_on_ButtonInfo_pressed"]
[connection signal="pressed" from="ButtonBuy" to="." method="_on_ButtonBuy_pressed"]
